--- a/css/selectors/selectors.html
+++ b/css/selectors/selectors.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 	<h2>Element selector one</h2>
-	<h2>Element selector two</h2>
+	<h2 class ="c1">class selector one</h2>
 	<h4 id="id-sel-1">Id selector One</h4>
 	<h2 id="id-sel-2">Id selector two</h2>
-	<h3 class="c1">Element selector one</h3>
+	<h3 class="c2">class  selector two</h3>
 	<h3>Element selector two</h3>
 </body>
 </html>
