--- a/html/paragraphs/paragraph.html
+++ b/html/paragraphs/paragraph.html
@@ -21,7 +21,7 @@
 		
 		source code
 	</p>
-	<p> the number of lines in the paragraph depends on the size of the browser,
+	<p> the number of lines in the paragraph depends on<br> the size of the browser,
 	    if you resize the browser.the number of lines in the paragraph will 
 		change.the number of lines in the paragraph depends on the browser ,if
 		you resize the browser window the number of lines in the paragraph will 
