--- a/html/tables/table.html
+++ b/html/tables/table.html
@@ -8,7 +8,9 @@
 	<h2 style="text-align:center;">Table</h2>
 	<table>
 	<tr>
-	<th>Employee id</th><th>first name</th><th>last name</th>
+	<th>Employee id</th>
+	<th>first name</th>
+	<th>last name</th>
 	</tr>
 	<tr>
 	<td>101</td>
