--- a/js/output/output.html
+++ b/js/output/output.html
@@ -9,14 +9,14 @@
 	<script src="output.js"></script>
 	<p id="p2">This is a para two from HTML</p>
 	<p id="p3">please look at the console window</p>
-		<p id="p4">document.write()</p>
-	<button onclick="override();">write</button>
+	<p id="p4">document.write()</p>
+	<button onclick="write();">write</button>
 	<p id="p5">window alert()</p>
 	<!-- by using window alert()-->
-	<h3>window.alert()</h3>
+	<h3>window alert()</h3>
 	<p>this is a window alert()</p>
-	<button onclick="window.alert()">NEFT Transfer</button>
-	<script src="output.js"></script>
+	<button onclick="windowAlert();">NEFT Transfer</button>
+	<!--<script src="output.js"></script>-->
 	<!--by using window.print()-->
 	<button onclick="window.print()">print this pages</button>
 </body>
